--- a/src/app/rental/rental-incoming/rental-incoming.component.html
+++ b/src/app/rental/rental-incoming/rental-incoming.component.html
@@ -13,132 +13,126 @@
   <div class="main">
     <div class="section text-center">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12 ml-auto mr-auto">
-            <h2 class="title">Incoming Bookings</h2>
-            <h5 class="description">生徒から予約リクエストが来ています！「引き受ける」ボタンで予約を確定させてください.</h5>
-            <div class="space-top"></div>
-          </div>
-        </div>
-        <div class="row">
-          <ng-container *ngIf="payments && payments.length > 0">
-            <ng-container *ngFor="let payment of payments; let i = index" >
-              <div *ngIf="!isExpired(payment.booking.startAt)" class='col-md-3 col-xs-6'>
-                <!-- <app-rental-incoming-list-item [booking]="bookin"></app-rental-incoming-list-item> -->
-                <div class="card" data-background="declined">
-                  <div class="card-image">
-                    <img class="img" src="{{ payment.booking.rental.image }}">
-                  </div>
-                  <div class="card-body">
-                    <label class="label label-warning">{{ payment.booking.rental.province }}</label>
-                    <h5 class="card-title">{{ payment.booking.rental.rentalname }} Trainer</h5>
-                    <div class="card-description">
-                      <div>Revenue: {{payment.ownerRevenue}} JPY</div>
-                      <div>Date: {{ payment.booking.startAt |  date: "yyyy / MM / dd" }}</div>
-                      <div>Time: {{ payment.booking.startAt |  date: "HH:mm" }} 〜 {{ payment.booking.endAt | date: "HH:mm" }}</div>
-                      <div>Status: {{ payment.booking.status }}</div>
-                    </div>
-                    <div class="author">
-                      <a href="#pablo">
-                        <img src="assets/img/faces/joe-gardner-2.jpg" alt="..." class="avatar img-raised">
-                        <span> {{ payment.fromUser.username }}</span>
-                      </a>
-                    </div>
-                  </div>
-                  <div *ngIf="!isExpired(payment.booking.startAt)" class="card-footer">
-                    <div *ngIf="payment.booking.status === 'pending'">
-                      <p><button class="btn btn-primary" (click)="acceptPayment(i, payment)">引き受ける</button></p>
-                      <p><button class="btn btn-gray" (click)="declinePayment(i, payment)">ことわる</button></p>
-                      <p><button class="btn btn-danger" (click)="openDialog(payment)">日時の調整提案</button></p>
-                    </div>
-                  </div>
-                  <div *ngIf="isExpired(payment.booking.startAt)" class="card-footer">
-                    <!-- <div *ngIf="payment.booking.status === 'active'">
-                      <app-review *ngIf="!booking.review" [bookingId]="booking._id" (reviewSubmitted)="reviewHandler(i, $event)"></app-review>
-                      <div *ngIf="booking.review">
-                        <button class="btn btn-gray" disabled>レビュー済</button>
+        <ngb-tabset [justify]="'center'" type="pills" class="nav-pills-danger">
+          <ngb-tab title="予約調整中">
+            <ng-template ngbTabContent>
+              <div class="row">
+                <div class="col-md-12 ml-auto mr-auto">
+                  <h2 class="title">Incoming Bookings</h2>
+                  <h5 class="description">生徒から予約リクエストが来ています！「引き受ける」ボタンで予約を確定させてください.</h5>
+                  <div class="space-top"></div>
+                </div>
+              </div>
+              <div class="row">
+                <ng-container *ngIf="payments && payments.length > 0">
+                  <ng-container *ngFor="let payment of payments; let i = index" >
+                    <div *ngIf="!isExpired(payment.booking.startAt)" class='col-md-3 col-xs-6'>
+                      <!-- <app-rental-incoming-list-item [booking]="bookin"></app-rental-incoming-list-item> -->
+                      <div class="card" data-background="declined">
+                        <div class="card-image">
+                          <img class="img" src="{{ payment.booking.rental.image }}">
+                        </div>
+                        <div class="card-body">
+                          <label class="label label-warning">{{ payment.booking.rental.province }}</label>
+                          <h5 class="card-title">{{ payment.booking.rental.rentalname }} Trainer</h5>
+                          <div class="card-description">
+                            <div>Revenue: {{payment.ownerRevenue}} JPY</div>
+                            <div>Date: {{ payment.booking.startAt |  date: "yyyy / MM / dd" }}</div>
+                            <div>Time: {{ payment.booking.startAt |  date: "HH:mm" }} 〜 {{ payment.booking.endAt | date: "HH:mm" }}</div>
+                            <div>Status: {{ payment.booking.status }}</div>
+                          </div>
+                          <div class="author">
+                            <a href="#pablo">
+                              <img src="assets/img/faces/joe-gardner-2.jpg" alt="..." class="avatar img-raised">
+                              <span> {{ payment.fromUser.username }}</span>
+                            </a>
+                          </div>
+                        </div>
+                        <div *ngIf="payment.booking.status === 'pending'" class="card-footer">
+                          <p><button class="btn btn-primary" (click)="acceptPayment(i, payment)">引き受ける</button></p>
+                          <p><button class="btn btn-gray" (click)="declinePayment(i, payment)">ことわる</button></p>
+                          <p><button class="btn btn-danger" (click)="openDialog(payment)">日時の調整提案</button></p>
+                        </div>
                       </div>
-                    </div> -->
-                    <div *ngIf="payment.booking.status !== 'active'">
-                      <button class="btn btn-gray" disabled>自動キャンセル</button>
                     </div>
+                  </ng-container>
+                </ng-container>
+                <div  *ngIf="!payments || payments.length==0" class="col-md-4">
+                  <div class="card card-pricing">
+                    <a routerLink="/rentals">
+                      <div class="card-body">
+                        <!-- <h3 class="card-category">No bookings found!</h3> -->
+                        <h3 class="card-title">No incoming bookings yet!</h3>
+                        <!-- <p class="card-description"></p>
+                        <div class="card-footer">
+                          <p class="btn btn-warning btn-round">Find my Trainer</p>
+                        </div> -->
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
-            </ng-container>
-          </ng-container>
-          <div  *ngIf="!payments || payments.length==0" class="col-md-4">
-            <div class="card card-pricing">
-              <a routerLink="/rentals">
-                <div class="card-body">
-                  <!-- <h3 class="card-category">No bookings found!</h3> -->
-                  <h3 class="card-title">No incoming bookings yet!</h3>
-                  <!-- <p class="card-description"></p>
-                  <div class="card-footer">
-                    <p class="btn btn-warning btn-round">Find my Trainer</p>
-                  </div> -->
+            </ng-template>
+          </ngb-tab>
+          <ngb-tab title="期限切れ">
+            <ng-template ngbTabContent>
+              <div class="row">
+                <div class="col-md-12 ml-auto mr-auto">
+                  <h2 class="title">Expired Bookings</h2>
+                  <h5 class="description">予約確定前に期限切れになってしまった予約リストです.</h5>
+                  <div class="space-top"></div>
                 </div>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 ml-auto mr-auto">
-            <h2 class="title">Expired Bookings</h2>
-            <h5 class="description">予約確定前に期限切れになってしまった予約リストです.</h5>
-            <div class="space-top"></div>
-          </div>
-        </div>
-        <div class="row">
-          <ng-container *ngIf="payments && payments.length > 0">
-            <ng-container *ngFor="let payment of payments; let i = index">
-              <div *ngIf="isExpired(payment.booking.startAt) && payment.booking.status !== 'active'" class='col-md-3 col-xs-6'>
-                <!-- <app-rental-incoming-list-item [booking]="bookin"></app-rental-incoming-list-item> -->
-                <div class="card" data-background="declined">
-                  <div class="card-image">
-                    <img class="img" src="{{ payment.booking.rental.image }}">
-                  </div>
-                  <div class="card-body">
-                    <label class="label label-warning">{{ payment.booking.rental.province }}</label>
-                    <h5 class="card-title">{{ payment.booking.rental.rentalname }} Trainer</h5>
-                    <div class="card-description">
-                      <div>Revenue: {{payment.ownerRevenue}} JPY</div>
-                      <div>Date: {{ payment.booking.startAt |  date: "yyyy / MM / dd" }}</div>
-                      <div>Time: {{ payment.booking.startAt |  date: "HH:mm" }} 〜 {{ payment.booking.endAt | date: "HH:mm" }}</div>
-                      <div>Status: {{ payment.booking.status }}</div>
+              </div>
+              <div class="row">
+                <ng-container *ngIf="payments && payments.length > 0">
+                  <ng-container *ngFor="let payment of payments; let i = index">
+                    <div *ngIf="isExpired(payment.booking.startAt) && payment.booking.status !== 'active'" class='col-md-3 col-xs-6'>
+                      <!-- <app-rental-incoming-list-item [booking]="bookin"></app-rental-incoming-list-item> -->
+                      <div class="card" data-background="declined">
+                        <div class="card-image">
+                          <img class="img" src="{{ payment.booking.rental.image }}">
+                        </div>
+                        <div class="card-body">
+                          <label class="label label-warning">{{ payment.booking.rental.province }}</label>
+                          <h5 class="card-title">{{ payment.booking.rental.rentalname }} Trainer</h5>
+                          <div class="card-description">
+                            <div>Revenue: {{payment.ownerRevenue}} JPY</div>
+                            <div>Date: {{ payment.booking.startAt |  date: "yyyy / MM / dd" }}</div>
+                            <div>Time: {{ payment.booking.startAt |  date: "HH:mm" }} 〜 {{ payment.booking.endAt | date: "HH:mm" }}</div>
+                            <div>Status: {{ payment.booking.status }}</div>
+                          </div>
+                          <div class="author">
+                            <a href="#pablo">
+                              <img src="assets/img/faces/joe-gardner-2.jpg" alt="..." class="avatar img-raised">
+                              <span> {{ payment.fromUser.username }}</span>
+                            </a>
+                          </div>
+                        </div>
+                        <div *ngIf="payment.booking.status !== 'active'" class="card-footer">
+                          <button class="btn btn-gray" disabled>自動キャンセル</button>
+                        </div>
+                      </div>
                     </div>
-                    <div class="author">
-                      <a href="#pablo">
-                        <img src="assets/img/faces/joe-gardner-2.jpg" alt="..." class="avatar img-raised">
-                        <span> {{ payment.fromUser.username }}</span>
-                      </a>
-                    </div>
-                  </div>
-                  <div *ngIf="isExpired(payment.booking.startAt)" class="card-footer">
-                    <div *ngIf="payment.booking.status !== 'active'">
-                        <button class="btn btn-gray" disabled>自動キャンセル</button>
-                    </div>
+                  </ng-container>
+                </ng-container>
+                <div  *ngIf="!payments || payments.length==0" class="col-md-4">
+                  <div class="card card-pricing">
+                    <a routerLink="/rentals">
+                      <div class="card-body">
+                        <!-- <h3 class="card-category">No bookings found!</h3> -->
+                        <h3 class="card-title">No expired bookings yet!</h3>
+                        <!-- <p class="card-description"></p>
+                        <div class="card-footer">
+                          <p class="btn btn-warning btn-round">Find my Trainer</p>
+                        </div> -->
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
-            </ng-container>
-          </ng-container>
-          <div  *ngIf="!payments || payments.length==0" class="col-md-4">
-            <div class="card card-pricing">
-              <a routerLink="/rentals">
-                <div class="card-body">
-                  <!-- <h3 class="card-category">No bookings found!</h3> -->
-                  <h3 class="card-title">No expired bookings yet!</h3>
-                  <!-- <p class="card-description"></p>
-                  <div class="card-footer">
-                    <p class="btn btn-warning btn-round">Find my Trainer</p>
-                  </div> -->
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
+            </ng-template>
+          </ngb-tab>
+        </ngb-tabset>
       </div>
     </div>
   </div>
